src/objects/Petitioner__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Petition__c</fullName>
        <label>Petition</label>
        <referenceTo>Petition__c</referenceTo>
        <relationshipLabel>Petitioners</relationshipLabel>
        <relationshipName>Petitioners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Petitioner_Information__c</fullName>
        <label>Petitioner Information</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <globalPicklist>States</globalPicklist>
        <label>State</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Petitioner</label>
    <nameField>
        <label>Petitioner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Petitioners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>